Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity_Swarm_Rule__c/Opportunity_Swarm_Rule__c.object-meta.xml
<CustomObject>
    <description>A rule indicating what users should auto-follow an Opportunity in Chatter.</description>
    <label>Opportunity Swarm Rule</label>
    <nameField>
        <displayFormat>OSR-{0000}</displayFormat>
        <label>Opportunity Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>