Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity_Swarm_Rule__c/fields/Notify_on_Swarm__c.field-meta.xml
<CustomField>
    <fullName>Notify_on_Swarm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>You will receive a Chatter message if you automatically follow a record.</inlineHelpText>
    <label>Notify on Swarm?</label>
    <type>Checkbox</type>
</CustomField>