Reetan.Nayak Dev 25/force-app/main/default/objects/Opportunity_Swarm_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Opportunities</fullName>
            </value>
            <value>
                <fullName>Only Opportunities for Accounts I Own</fullName>
            </value>
            <value>
                <fullName>Only Opportunities above a certain amount</fullName>
            </value>
            <value>
                <fullName>Only Opportunities that reach a certain stage in the sales process</fullName>
            </value>
            <value>
                <fullName>Only Opportunities of a certain Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>